--- a/brad48.html
+++ b/brad48.html
@@ -1,5 +1,8 @@
 <form action="brad49.php" method="post" enctype="multipart/form-data">
   <!--檔案上傳只能是post--><!--有檔上傳時必備-->
-  file: <input type="file" name="upload" />
+  file: <input type="file" name="upload[]" /> file:
+  <input type="file" name="upload[]" /> file:
+  <input type="file" name="upload[]" /> file:
+  <input type="file" name="upload[]" />
   <input type="submit" value="upload" />
 </form>
